remove public option from user form . removed busy option from venue table filter added conformation message on (view venue, view user, venue table, user table and view event ) Fixed name alignment toward back button on view user and venue date are made user friendly on view event detail search made responsive on user table

--- a/src/components/dashboard/administration/venues/venue.css
+++ b/src/components/dashboard/administration/venues/venue.css
@@ -5,3 +5,10 @@
     padding-left: 10px !important;
     font-size: 16px !important;
 }
+.show-venue-heading{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
