--- a/src/components/dashboard/reactTable/reactTable.css
+++ b/src/components/dashboard/reactTable/reactTable.css
@@ -34,7 +34,7 @@ color: #FFFFFF;
 
 }
 .user-search {
-    width: 451px !important;
+    max-width: 451px !important;
     height: 38px !important;
     background: #FFFFFF !important;
     border: 1px solid #D8DDE2 !important;
